--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -196,7 +196,10 @@ spec:
               . "${scripts_dir}/update_flow_provider.sh"
               xmlstarlet ed --inplace --subnode "/providers/flowPersistenceProvider" --type elem -n property -v "${NIFI_REGISTRY_GIT_REPO:-}" -i \$prev --type attr -n name -v "Remote Clone Repository" "${NIFI_REGISTRY_HOME}/conf/providers.xml"
           {{- /* if .Values.security.enabled */}}{{- end }}
-
+              
+              scripts_dir='/opt/nifi-registry/scripts'
+              . "${scripts_dir}/update_flow_provider.sh"
+              
               # Log everything to the console, not to files
               xmlstarlet ed --inplace --delete "//configuration/logger/appender-ref[@ref='CONSOLE']" "${NIFI_REGISTRY_HOME}/conf/logback.xml"
               xmlstarlet ed --inplace --update "//configuration/logger/appender-ref[@ref='BOOTSTRAP_FILE']/@ref" -v CONSOLE "${NIFI_REGISTRY_HOME}/conf/logback.xml"
