--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -200,6 +200,11 @@ spec:
           {{- if .Values.flowProvider.postgres.enabled }}    
               scripts_dir='/opt/nifi-registry/scripts'
               . "${scripts_dir}/update_flow_provider.sh"
+
+              prop_replace 'nifi.registry.db.url' {{ .Values.flowProvider.postgres.url }}
+              prop_replace 'nifi.registry.db.driver.class' {{ .Values.flowProvider.postgres.driverClass }}
+              prop_replace 'nifi.registry.db.username' {{ .Values.flowProvider.postgres.username }}
+              prop_replace 'nifi.registry.db.password' {{ .Values.flowProvider.postgres.password }}
           {{- /* if .Values.flowProvider.postgres.enabled */}}{{- end }}
               
               # Log everything to the console, not to files
