--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -201,11 +201,11 @@ spec:
               scripts_dir='/opt/nifi-registry/scripts'
               . "${scripts_dir}/update_flow_provider.sh"
 
-              prop_replace 'nifi.registry.db.url' {{ .Values.flowProvider.postgres.url }}
-              prop_replace 'nifi.registry.db.driver.class' {{ .Values.flowProvider.postgres.driverClass }}
-              prop_replace 'nifi.registry.db.driver.directory' {{ .Values.flowProvider.postgres.driverDirectory }}
-              prop_replace 'nifi.registry.db.username' {{ .Values.flowProvider.postgres.username }}
-              prop_replace 'nifi.registry.db.password' {{ .Values.flowProvider.postgres.password }}
+              # prop_replace 'nifi.registry.db.url' {{ .Values.flowProvider.postgres.url }}
+              # prop_replace 'nifi.registry.db.driver.class' {{ .Values.flowProvider.postgres.driverClass }}
+              # prop_replace 'nifi.registry.db.driver.directory' {{ .Values.flowProvider.postgres.driverDirectory }}
+              # prop_replace 'nifi.registry.db.username' {{ .Values.flowProvider.postgres.username }}
+              # prop_replace 'nifi.registry.db.password' {{ .Values.flowProvider.postgres.password }}
 
               #remove debug
               prop_replace 'nifi.registry.db.sql.debug' true
