--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -201,7 +201,7 @@ spec:
               scripts_dir='/opt/nifi-registry/scripts'
               . "${scripts_dir}/update_flow_provider.sh"
 
-              prop_replace 'nifi.registry.db.url' {{ .Values.flowProvider.postgres.url }}
+              # prop_replace 'nifi.registry.db.url' {{ .Values.flowProvider.postgres.url }}
               prop_replace 'nifi.registry.db.driver.class' {{ .Values.flowProvider.postgres.driverClass }}
               prop_replace 'nifi.registry.db.driver.directory' {{ .Values.flowProvider.postgres.driverDirectory }}
               prop_replace 'nifi.registry.db.username' {{ .Values.flowProvider.postgres.username }}
