--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -202,10 +202,10 @@ spec:
               . "${scripts_dir}/update_flow_provider.sh"
 
               prop_replace 'nifi.registry.db.url' "{{ .Values.flowProvider.postgres.url }}"
-              prop_replace 'nifi.registry.db.driver.class' {{ .Values.flowProvider.postgres.driverClass }}
-              prop_replace 'nifi.registry.db.driver.directory' {{ .Values.flowProvider.postgres.driverDirectory }}
-              prop_replace 'nifi.registry.db.username' {{ .Values.flowProvider.postgres.username }}
-              prop_replace 'nifi.registry.db.password' {{ .Values.flowProvider.postgres.password }}
+              prop_replace 'nifi.registry.db.driver.class' "{{ .Values.flowProvider.postgres.driverClass }}"
+              prop_replace 'nifi.registry.db.driver.directory' "{{ .Values.flowProvider.postgres.driverDirectory }}"
+              prop_replace 'nifi.registry.db.username' "{{ .Values.flowProvider.postgres.username }}"
+              prop_replace 'nifi.registry.db.password' "{{ .Values.flowProvider.postgres.password }}"
           {{- /* if .Values.flowProvider.postgres.enabled */}}{{- end }}
               
               # Log everything to the console, not to files
